# cache-commander

./: .gitignore  .mcp.json  CHANGELOG.md  Cargo.toml  README.md  REVIEW-0.2.0.md  TODO.md  demo.tape  deny.toml
.github/workflows/: ci.yml  release.yml
doc/: ccmd.1
docs/: adding-a-provider.md  mcp.md  user-guide.md
docs/superpowers/plans/: 2026-04-20-swiftpm-xcode-providers.md
docs/superpowers/specs/: 2026-04-05-homebrew-enrichment-design.md  2026-04-08-yarn-pnpm-providers-design.md  2026-04-20-swiftpm-xcode-providers-design.md
homebrew/: ccmd.rb
src/: app.rs  config.rs  lib.rs  main.rs
src/mcp/: mod.rs  safety.rs  tools.rs
src/providers/: bun.rs  cargo.rs  chroma.rs  generic.rs  go_mod.rs  homebrew.rs  huggingface.rs  mod.rs  npm.rs  pip.rs  pnpm.rs  pre_commit.rs  prisma.rs  swiftpm.rs  torch.rs  uv.rs  xcode.rs  yarn.rs
src/scanner/: mod.rs  walker.rs
src/security/: cache.rs  mod.rs  osv.rs  registry.rs
src/tree/: node.rs  state.rs
src/ui/: detail_panel.rs  dialogs.rs  theme.rs  tree_panel.rs
src/updater/: mod.rs
tests/: cache_persistence.rs  e2e_go_provider.rs  e2e_js_providers.rs  e2e_jvm_providers.rs  integration.rs  integration_swiftpm_xcode.rs  keybindings.rs  mcp_integration.rs
