[package]
name = "ccmd"
version = "0.1.0"
edition = "2021"
description = "Cache Commander — a TUI for browsing and managing cache directories"
license = "MIT"
repository = "https://github.com/juliensimon/cache-commander"
homepage = "https://github.com/juliensimon/cache-commander"
keywords = ["cache", "tui", "disk-space", "cleanup"]
categories = ["command-line-utilities"]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.tar.gz"
pkg-fmt = "tgz"
bin-dir = "{ bin }{ binary-ext }"

[features]
default = []
mcp = ["dep:rmcp", "dep:tokio", "dep:schemars"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
jwalk = "0.8"
directories = "5"
humansize = "2"
chrono = "0.4"
ureq = "2"
serde_json = "1"
rmcp = { version = "0.16", features = ["server", "transport-io", "macros"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
schemars = { version = "1", features = ["derive"], optional = true }

[profile.release]
strip = true
lto = true
codegen-units = 1

[dev-dependencies]
tempfile = "3"
